fix wrong margins on checklist mobile

--- a/src/styles/partials/row.less
+++ b/src/styles/partials/row.less
@@ -56,7 +56,7 @@
     }
 
     // breakout columns and make them full width
-    .breakout-column-tablet-mobile();
+    .breakout-column-mobile();
   }
 }
 
@@ -92,7 +92,7 @@
   }
 }
 
-.breakout-column-tablet-mobile() {
+.breakout-column-mobile() {
   @media screen and (max-width: @viewport-width-mobile) {
     .breakout-column-for-viewport(@layout-grid-gutter-mobile, @layout-grid-margin-mobile);
   }
